首頁：職涯諮詢成功案例 & 訂閱電子報 &  與我聯繫 & 頁腳

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <h2>部落格精選</h2>
         </div> 
         <div class="blog-list">
-            <a class="prev-next-links" href="#"><img src="https://hex2025.worksbyaaron.com/icon/left-arrow.webp" alt="上一篇"  style="opacity: 0.3;"></a>
+            <a class="prev-next-links" href="#"><img src="https://raw.githubusercontent.com/li21593113/HTMLCSSWIN/refs/heads/main/arrow-left-circle.png" alt="上一篇"></a>
             <ul>
             <li>
                 <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/blog/About%20Section.png?raw=true" alt="自學前端不用怕">
@@ -134,19 +134,22 @@
                 <a class="read" href="#">閱讀內文</a>
             </li>
             </ul>
-            <a class="prev-next-links"  href="#"><img src="https://hex2025.worksbyaaron.com/icon/right-arrow.webp" alt="下一篇"></a>
+            <a class="prev-next-links"  href="#"><img src="https://github.com/li21593113/HTMLCSSWIN/blob/main/arrow-right-circle.png?raw=true" alt="下一篇"></a>
         </div>    
        </div>
 
        <div class="cases">
-        <h2>職涯諮詢成功案例</h2>
+        <div class="cases-title">
+        <h2>職涯諮詢</h2>
+        <h2>成功案例</h2>
+        </div>
         <div class="cases-intro">
         <div class="cases-Alyse">
             <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/photo8.png?raw=true" alt="Alyse Wang">
         </div>
         <div class="cases-content">
             <div class="line"></div>
-            <p>在職涯發展的關鍵轉折點上，適時的協助與正確的方向至關重要。藉由職涯諮詢，我可以幫助你加速釐清目標、建立更全面的技術與軟實力，並有效突破原有的舒適圈。</p>
+            <p>在職涯發展的關鍵轉折點上，適時的協助與正確的方向至關重要。藉由職涯諮詢，我可以幫助你加速釐清目標、建立更全面的技術與軟實力，並有效<span style="color: #0027D5">突破原有的舒適圈</span>。</p>
         </div>
         <div class="cases-btn">
             <div class="line"></div>
@@ -166,9 +169,121 @@
                     <div class="line"></div>
                     <a href="#">前往聆聽 podcast</a>
                 </li>
-                
+                <li>
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/people2.png?raw=true" alt="轉職迷茫到明確學習規劃">
+                    <h4>轉職迷茫到明確學習規劃</h4>
+                    <ul>
+                        <li>制訂階段性目標與時間安排</li>
+                        <li>鼓勵參與前端社群或活動</li>
+                    </ul>
+                    <div class="line"></div>
+                    <a href="#">前往聆聽 podcast</a>
+                </li>
+                <li>
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/people3.png?raw=true" alt="面試緊張到從容應對">
+                    <h4>面試緊張到從容應對</h4>
+                    <ul>
+                        <li>透過面試模擬找出常犯的邏輯漏洞</li>
+                        <li>討論遇到不熟悉議題時的回應方式</li>
+                    </ul>
+                    <div class="line"></div>
+                    <a href="#">前往聆聽 podcast</a>
+                </li>
+                <li>
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/people4.png?raw=true" alt="面試緊張到從容應對">
+                    <h4>面試緊張到從容應對</h4>
+                    <ul>
+                        <li>擬定進階框架或技術研究目標</li>
+                        <li>培養跨團隊溝通與簡報能力</li>
+                    </ul>
+                    <div class="line"></div>
+                    <a href="#">前往聆聽 podcast</a>
+                </li>
             </ul>        
-       </div>     
+       </div>
+       </div>
+       <div class="subcribe">
+        <div class="subcribe-left-Alyse">
+            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/photo9.png?raw=true" alt="Alyse Wang">
+        </div>
+        <div class="subcribe-right">
+            <div class="subcribe-right-form">
+                <h2>訂閱電子報</h2>
+                <p>立即訂閱，搶先掌握<span style="color: #0027D5">前端 x 職涯</span>的獨家資訊！</p>
+                <form action="#" method="post">
+                    <input type="name" name="name" placeholder="請輸入您的大名" required>
+                    <input type="email" name="email" placeholder="請輸入您的電子信箱" required>
+                    <button type="submit">啟動訂閱</button>
+                </form>
+            </div>
+        </div>
+       </div>
+       <div class="contact">
+       <h2>與我聯繫</h2>
+       <div class="contact-info">
+            <div class="contact-info-left">
+            <div class="contact-info-left-email">    
+            <a class ="email" href="mailto:alysewang@hexschool.com">alysewang@hexschool.com</a>
+            <p>合作洽談</p>
+            </div>
+            </div>
+            <div class="contact-info-right">
+            <a href="#"><img src="https://github.com/li21593113/HTMLCSSWIN/blob/main/arrow-right.png?raw=true" alt="點擊前往"></a>
+            </div>
+        </div>
+        <div class="contact-info">
+            <div class="contact-info-left">
+            <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/onlyIcon.png?raw=true" alt="youtube"></a>
+            <a href="#">Youtube</a>
+            <p>職涯諮詢室</p>
+            </div>
+            <div class="contact-info-right">
+            <a href="#"><img src="https://github.com/li21593113/HTMLCSSWIN/blob/main/arrow-right.png?raw=true" alt="點擊前往"></a>
+            </div>
+        </div>
+        <div class="contact-info">
+            <div class="contact-info-left">
+            <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/onlyIcon-1.png?raw=true" alt="podcast"></a>
+            <a href="#">Podcast</a>
+            <p>職涯諮詢室</p>
+            </div>
+            <div class="contact-info-right">
+            <a href="#"><img src="https://github.com/li21593113/HTMLCSSWIN/blob/main/arrow-right.png?raw=true" alt="點擊前往"></a>
+            </div>
+        </div>
+        <div class="contact-info">
+            <div class="contact-info-left">
+            <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/onlyIcon-2.png?raw=true" alt="facebook"></a>
+            <a href="#">Facebook</a>
+            <p>前端社群</p>
+            </div>
+            <div class="contact-info-right">
+            <a href="#"><img src="https://github.com/li21593113/HTMLCSSWIN/blob/main/arrow-right.png?raw=true" alt="點擊前往"></a>
+            </div>
+        </div>
+        <div class="contact-info">
+            <div class="contact-info-left">
+            <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/icons8-linkedin.png?raw=true" alt="linkedin"></a>
+            <a href="#">Linkedin</a>
+            <p>職涯交流</p>
+            </div>
+            <div class="contact-info-right">
+            <a href="#"><img src="https://github.com/li21593113/HTMLCSSWIN/blob/main/arrow-right.png?raw=true" alt="點擊前往"></a>
+            </div>
+        </div>
+        <div class="contact-info">
+            <div class="contact-info-left">
+            <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/index/onlyIcon-3.png?raw=true" alt="instagram"></a>
+            <a href="#">Instagram</a>
+            <p>日常分享</p>
+            </div>
+            <div class="contact-info-right">
+            <a href="#"><img src="https://github.com/li21593113/HTMLCSSWIN/blob/main/arrow-right.png?raw=true" alt="點擊前往"></a>
+            </div>
+        </div>     
+    </div>
+    <div class="footer">
+        <p>© 2025 Alyse Wang. All rights reserved.</p>
     </div>            
 </body>
 </html>
